@@ -79,6 +79,14 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        
+                    <!-- Jakarta Mail (formerly JavaMail) -->
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>angus-mail</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -94,6 +102,16 @@
                     <target>21</target>
                 </configuration>
             </plugin>
+            
+            <!-- ✅ Surefire plugin (for running tests with preview features) -->
+        	<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>3.2.5</version>
+            	<configuration>
+                	<argLine>--enable-preview</argLine>
+            	</configuration>
+        	</plugin>
 
             <!-- WAR plugin -->
             <plugin>
